Services Added - GoogleLocation (GoogleAPI), AndroidLocation(AndroidAPI) Models added for JSON response strings.xml updated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sadin.weatherme">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
@@ -18,7 +24,17 @@
         </activity>
         <activity
             android:name=".activities.SettingsActivity"
-            android:label="@string/title_activity_settings" />
+            android:label="@string/title_activity_settings"
+            android:theme="@style/AppTheme" />
+
+        <service
+            android:name=".services.GoogleLocationService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".services.AndroidLocationService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
